# Wallet-api

./: .env.example  .gitignore  Dockerfile  Dockerfile.test  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260325_0001_create_wallets_table.py
app/: main.py  prestart.py
app/api/: router.py
app/api/v1/: wallets.py
app/core/: config.py  constants.py  exceptions.py  logging.py
app/db/: session.py
app/db/models/: __init__.py  wallet.py
app/repositories/: wallet.py
app/schemas/: wallet.py
app/services/: wallet.py
docker/: entrypoint.sh
docs/: wallet_api_detailed_review_2026-03-25.html
tests/: conftest.py  test_wallets.py
