[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wallet-api"
version = "0.1.0"
description = "REST API for user wallets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.1,<2.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "greenlet>=3.0.3,<4.0.0",
    "pydantic-settings>=2.2.1,<3.0.0",
    "sqlalchemy>=2.0.29,<3.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "asgi-lifespan>=2.1.0,<3.0.0",
    "httpx>=0.27.0,<1.0.0",
    "pytest>=8.1.1,<9.0.0",
    "pytest-asyncio>=0.23.6,<1.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
